[package]
name = "PerformanceTestApp"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio   = { version = "1",   features = ["full"] }
futures = "0.3.31"
rayon = "1.11.0"
